# python-project-49

./: README.md  REAdDME.md  brain-even-demo  brain-gcd-demo  brain-prime-demo  brain-progression-demo  demo.cast  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  run_progression.py
