[project]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of five console-based mathematical brain games"
authors = [
    {name = "Olga", email = "nemo0mb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.1",
]

[project.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-even = "brain_games.games.brain_even:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"
